hphp/hack/test/typecheck/inout/bad_inout_decl_memoize1.php
<?hh

<<__Memoize>>
function foo(mixed $x, inout mixed $y, mixed $z): void {}
